--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
 *= require custom
 *= require dt-bootstrap
 *= require multi-select
+
 */
 
 
@@ -29,5 +30,8 @@
   cursor: help;
 }
 
+
+strong.checkit{text-decoration:line-through;}
+strong.uncheckit{text-decoration:none;}
 
 
