--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
 <!-- User index -->
-<div class="main-content">
+
+
 <div class="row row-top">
-    <div class="col-md-10">
+    <div class="col-md-10 users">
       <h3>Users</h3>
     </div>
     <div class="col-md-2">
@@ -13,40 +14,39 @@
 
 
 <div class="row">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>First Name</th>
-                <th>Branch</th>
-                <th>Role</th>
-                <th>Email</th>
-                <th>Invitation</th>
-                <th>State</th>
-                <th colspan=2>&nbsp;</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @users.each do |user| %>
-                <% un = user.first_name.nil? ? "Mr. Unknown" : user.first_name %>
-                  <tr>
-                    <td><%= link_to un,user  %></td>
-                    <td><%= user.br %></td>
-                    <td><%= user.role.name.titleize rescue "Unassigned" %></td>
-                    <td><%= user.email %></td>
-                    <td><%= user.confirmed_at ? "Accepted" : "Not Accepted" %></td>
-                    <td><%= user.active_for_authentication? ? "Active" : "Inactive" %></td>
-                    <td>
-                    <% if (!user.adm? rescue "OK") %>
-                    <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe,
-                                user, 
-                                method: :delete, 
-                                data: { confirm: 'Are you sure?' } %>
-                    <% end %>
-                    </td>
-                  </tr>
-              <% end %>
-            </tbody>
-          </table>
+<div class="col-md-12 data-table">
+
+            <div class="col-md-3">
+                <form class="form-inline" role="form">
+                  <div class="form-group pull-right">
+
+                    <%= select_tag :abdc,
+                      options_for_select(Branch.order(:name).map{|i| [i.name,i.id]}),
+                      {prompt: "-all branch-",
+                       class: "form-control hor-first",
+                       onchange: "filterUsers(this,'branch');"} %>
+                       
+                     
+                  </div>
+                </form>
+            </div>
+            <div class="col-md-3">
+                <form class="form-inline" role="form">
+                  <div class="form-group pull-right">
+            <%= select_tag :abdc,
+                      options_for_select(Role.order(:name).map{|i| [i.name.titleize,i.id]}),
+                      {prompt: "-all role-",
+                       class: "form-control hor-first",
+                       onchange: "filterUsers(this,'role');"} %>
+                  </div>
+                </form>
+            </div>
+            <br/>
+            <br/>
+            <div id="users-table">
+                <%= render 'table' %>
+            </div>
+
 </div>
 </div>
 
