Calendar almost done, UI review required. Fixed columns to diplay, trigger click bug

--- a/app/views/enquiries/_preferred_countries.html.erb
+++ b/app/views/enquiries/_preferred_countries.html.erb
@@ -5,5 +5,9 @@
                        "country_ids",
                        @countries,
                        (@countries.map{|i| i[1]})) %>
+                       
+<script>
+actMultiSelect('multiple-select');
+</script>
   
 
