--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
 *= require custom
 *= require dt-bootstrap
 *= require multi-select
+*= require fullcalendar
 
 */
 
@@ -33,5 +34,10 @@
 
 strong.checkit{text-decoration:line-through;}
 strong.uncheckit{text-decoration:none;}
+
+.cal_todo{background: #004156;}
+.cal_follow_up{background: #267ab3;}
+
+
 
 
