--- a/app/views/email_templates/edit.js.erb
+++ b/app/views/email_templates/edit.js.erb
@@ -1,6 +1,6 @@
  
-  <% ctnt = (render 'form', {new_resource: @branch,
-                             resource_disp1: "Branch",
+  <% ctnt = (render 'form', {new_resource: @email_template,
+                             resource_disp1: "Email Template",
                              div: "",
                              h: "Edit"}) %>
                              
