--- a/app/views/smtps/edit.js.erb
+++ b/app/views/smtps/edit.js.erb
@@ -1,6 +1,6 @@
  
-  <% ctnt = (render 'form', {new_resource: @branch,
-                             resource_disp1: "Branch",
+  <% ctnt = (render 'form', {new_resource: @smtp,
+                             resource_disp1: "Smtp",
                              div: "",
                              h: "Edit"}) %>
                              
@@ -14,3 +14,4 @@
   $('#resource-edit').modal('show');
   
   $('.temp').remove();
+
