--- a/app/views/user_configs/_email.html.erb
+++ b/app/views/user_configs/_email.html.erb
@@ -25,7 +25,7 @@
                                  {},
                                  {}],
                                  "select",
-                                 ["Default Create Enquiry Email",4],5) %>
+                                 ["Default Create Enquiry From Email",4],5) %>
 
                       <%= bs(f,:auto_email_enq,"check_box",["Auto Send",4],5) %> 
 
