--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@ $(function(){
 
 
 <div class="tab-container">
-<%= render 'users/menus' %>
+<%= render 'users/menu' %>
 <div class="tab-content" style="display:block">
 <div class="boxp box-theme-ch">
 <% a = @user %>
