--- a/app/views/resources/_menu.html.erb
+++ b/app/views/resources/_menu.html.erb
@@ -5,9 +5,9 @@
             :course_level,:course_subject,:doc_category,
             :english_level,:enquiry_status,:event_type,
             :exam_type,:qualification,:student_source,
-            :todo_status,:todo_topic,
-            :institution_type,:institution_group,:contract_doc_category,
-            :person_type,:commission_status,:allow_ip,:branch].sort.each do |r| %>
+            :todo_topic,:institution_type,:institution_group,
+            :contract_doc_category,:person_type,:commission_status,
+            :allow_ip,:branch,:role,:smtp,:email_template].sort.each do |r| %>
       <% if can? :read, r.to_s.camelize.constantize %>
       <li id='<%= r.to_s %>' >
          <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
