--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,67 +1,65 @@
+<!-- rendering the left menu -->
+<%= render 'resources/menu' %>
+
+<!-- roles information -->
+
+<% resource_disp1 = "Role" %>
+<% resource_disp2 = "Roles" %>
+<% resource = @roles %>
+<% new_resource = Role.new %>
+
+<div class="col-md-9">
+  <div class="config-content">
+        <div class="row row-top">
+          <h3><%= resource_disp2 %></h3>
+        </div>
+        <div class="row">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Created</th>
+                <th>Last Modified</th>
+                <th colspan=2>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% resource.each do |r| %>
+                <tr>
+                  <td><%= r.name.titleize %></td>
+                  <td><%= truncate(r.desc,length: 20) %></td>
+                  <td><%= r.cby %>(<%= r.created_at.to_s %>)</td>
+                  <td><%= r.uby %>(<%= r.updated_at.to_s %>)</td>
+                  <td>
+                    <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, 
+                                edit_role_path(r),
+                                {remote: true,
+                                onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %>
+                    <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, 
+                                r, 
+                                method: :delete, 
+                                data: { confirm: 'Are you sure?' }  %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+
+  <%= render "form", {new_resource: new_resource,
+                      resource_disp1: resource_disp1,
+                      div: "well",
+                      h: "New"} %>
+                      
+  <div id="edit-resource-container"></div>
+</div>
+</div>
 <script type="text/javascript">
-$(function(){
-  $('li.roles_path').addClass('active-tab');
-  $('td.role_name').hover(function(){
-    $('span.delete_role').hide();
-    $(this).find('span.delete_role').show();
-  });
-  activeMM("usersMM");
-  setColorsFromSession();
-  
-});
+ actmm("configuration");
+ actsm("role");
 
 </script>
 
-<div class="tab-container">
-<%= render 'users/menus' %>
-<div class="tab-content" style="display:block">
-<div class="boxp box-theme-ch">
-<div class="htab">
-<h4>
-        Organizor Roles
-        </h4></div>
-        <br/>
-        <br/>
-        <br/>
-<table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
-<thead>
-                  <tr>
-                                        <th>Name</th>
-                                        <th>Description</th>
-                  </tr>
-                </thead>
-                <tbody>
-<% @roles.each do |role| %>
-  <span>
-  <tr>
-      <td class="role_name" onClick="$('tr.permissions').hide();$(this).parent('tr').next('tr.permissions').slideToggle();" >
-      <%= role.name.titleize %>
-      <span class="delete_role" style="display:none">
-        &nbsp;&nbsp;&nbsp;
-        <%= link_to 'delete', role, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </span>
-      </td>
-      <td>
-        <%= truncate(role.desc,length: 20) %>
-      </td>
-  </tr>
-  <tr class="permissions" style="display:none;">
-
-      <td colspan=2>
-        <%= render 'permissions', role: role %>
-      </td>
-
-  </tr>
-  </span>
-
-<% end %>
-</tbody>
-</table>
-<br/>
-<br/>
-<br/>
-</div>
-</div>
-</div>
 
 
