--- a/app/views/smtps/index.html.erb
+++ b/app/views/smtps/index.html.erb
@@ -1,122 +1,68 @@
-<script>
-$(function(){
-  setColorsFromSession();
-  $("ul.tab-menus li.all_smtps").trigger('click');
-  activeMM("emailMM");
- });
+<!-- rendering the left menu -->
+<%= render 'resources/menu' %>
+
+<!-- branches more information -->
+
+<% resource_disp1 = "Smtp" %>
+<% resource_disp2 = "Smtps" %>
+<% resource = @smtps %>
+<% new_resource = Smtp.new %>
+
+<div class="col-md-9">
+  <div class="config-content">
+        <div class="row row-top">
+          <h3><%= resource_disp2 %></h3>
+        </div>
+        <div class="row">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Created</th>
+                <th>Last Modified</th>
+                <th colspan=2>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% resource.each do |r| %>
+                <tr>
+                  <td><%= link_to r.name,
+                                  smtp_path(r),
+                                  {remote: true,
+                                   onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %></td>
+                  <td><%= truncate(r.desc,length: 20) %></td>
+                  <td><%= r.cby %>(<%= r.created_at.to_s %>)</td>
+                  <td><%= r.uby %>(<%= r.updated_at.to_s %>)</td>
+                  <td>
+                    <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, 
+                                edit_smtp_path(r),
+                                {remote: true,
+                                onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %>
+                    <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, 
+                                r, 
+                                method: :delete, 
+                                data: { confirm: 'Are you sure?' }  %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+
+  <%= render "form", {new_resource: new_resource,
+                      resource_disp1: resource_disp1,
+                      div: "well",
+                      h: "New"} %>
+                      
+  <div id="edit-resource-container"></div>
+</div>
+</div>
+<script type="text/javascript">
+ actmm("configuration");
+ actsm("smtp");
+
 </script>
 
 
-<div class="tab-container">
-
-    <%= render "email_templates/menus" %>
-    <div class="tab-content" style="display:block">
-    <div class="boxp box-theme-ch">
-        <h4 class="htab">
-        All SMTPs
-        </h4>
-
-        <ul class="vlsdet">
-
-        <% @smtps.each do |s| %>
-           <br/>
-           <br/>
-           <h6 class="htab"> <%= s.name %>  &nbsp;&nbsp;&nbsp;
-          <%= link_to 'Delete', s, method: :delete, data: { confirm: 'Are you sure?' } %>
-           </h6>
-           <br/>
-           <br/>
-          <li>
-            <label> Address </label>: <%= s.address %>
-          </li>
-          
-          <li>
-            <label> Port </label>: <%= s.port %>
-          </li>
-          
-          <li>
-            <label> Domain </label>: <%= s.domain %>
-          </li>
-          
-          <li>
-            <label> User Name </label>: <%= s.user_name %>
-          </li>
-          
-          <li>
-            <% a = ""; s.password.size.times{  a  += "*"  }  %>
-            <label> Password </label>: <i> <%= a %></i>
-          </li>
-          
-          <li>
-            <label> Authentication </label>: <%= s.authentication %>
-          </li>
-          
-          <li>
-            <label> Enable Starttls Auto </label>: <%= s.enable_starttls_auto %>
-          </li>
-            
-          
-
-        <% end %>
-        </ul>
-
-        <br/>
-        <br/>
-        <br/>
-        <%= link_to 'New Smtp', "#",{class: "btnp", onclick: "$('#new_smtp_form').slideToggle();"} %>
-        <br/>
-        <br/>
-        <br/>
-        <div id="new_smtp_form" style="display:none;">
-        <%= form_for(Smtp.new) do |f| %>
-          <ul class="vlsdet">
-           <h6 class="htab"> New Smtp </h6>
-           <br/>
-           <br/>
-           
-          <li>
-            <label> Name </label> <%= f.text_field :name %>
-          </li>
-          
-          <li>
-            <label> Address </label> <%= f.text_field :address %>
-          </li>
-          
-          <li>
-            <label> Port </label> <%= f.text_field :port %>
-          </li>
-          
-          <li>
-            <label> Domain </label> <%= f.text_field :domain %>
-          </li>
-          
-          <li>
-            <label> User Name </label> <%= f.text_field :user_name %>
-          </li>
-          
-          <li>
-            <label> Password </label> <i> <%= f.password_field :password %></i>
-          </li>
-          
-          <li>
-            <label> Authentication </label> <%= f.text_field :authentication %>
-          </li>
-          
-          <li>
-            <label> Enable Starttls Auto </label> <%= f.text_field :enable_starttls_auto %>
-          </li>
-          <br/>
-
-          <li><%= f.button "Create", class: "btnp" %></li>
-        </ul>
-
-            
-         
-        <% end %>
-        </div>
-        <br/>
-        <br/>
-     </div>
-     </div>
-</div>
 
